--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,10 @@ ver_major=0
 ver_minor=0
 ver_build=0
 
-minecraft_ver=1.10.2
-minecraftfogre_ver=12.18.2.2118
+minecraft_ver=1.11
+minecraftfogre_ver=13.19.1.2199
 
-mapping_ver=snapshot_20161102
+mapping_ver=snapshot_20161231
+
+kotlin_ver=1.0.6
+forgelin_ver=1.2.0
