--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,13 @@
 ver_api=0
 ver_major=0
 ver_minor=0
-ver_build=0
 
-minecraft_ver=1.11
-minecraftfogre_ver=13.19.1.2199
+minecraft_ver=1.11.2
+minecraftfogre_ver=13.20.0.2282
 
-mapping_ver=snapshot_20161231
+mapping_ver=snapshot_20170417
 
-kotlin_ver=1.0.6
-forgelin_ver=1.2.0
+kotlin_ver=1.1.1
+forgelin_ver=1.4.1
+oreregistry_ver=1.0.0.3
+mcmp_ver=2.0.0_17
